<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Information"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/status_check"
        android:textColor="@color/black"
        android:textSize="24sp"
        />

    <ImageView
        android:contentDescription="Checkmark"
        android:id="@+id/imageView3"
        android:layout_width="92dp"
        android:layout_height="93dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        app:srcCompat="@drawable/checkmark_new"
        />

    <TextView
        android:id="@+id/temp"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/andika"
        android:gravity="center|top"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:paddingTop="9dp"
        android:letterSpacing="0.09"
        />



    <TextView
        android:id="@+id/battery"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/andika"
        android:gravity="center|top"
        android:text="@string/battery"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:paddingTop="9dp"
        android:backgroundTint="@color/white"
        android:letterSpacing="0.09"
        />

    <TextView
        android:id="@+id/current"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/andika"
        android:gravity="center|top"
        android:text="@string/current"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:paddingTop="9dp"
        android:backgroundTint="@color/white"
        android:letterSpacing="0.09"
        />

    <TextView
        android:id="@+id/button4"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/andika"
        android:gravity="center|top"
        android:text="@string/voltage"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:paddingTop="9dp"
        android:letterSpacing="0.09"

        />

    <TextView
        android:id="@+id/button5"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/andika"
        android:gravity="center|top"
        android:text="@string/irradiance"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:paddingTop="9dp"
        android:backgroundTint="@color/white"
        android:letterSpacing="0.09"
        />

    <TextView
        android:id="@+id/button6"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/andika"
        android:gravity="center|top"
        android:text="@string/shutofftime"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:paddingTop="9dp"
        android:backgroundTint="@color/white"
        android:letterSpacing="0.09"
        />

</RelativeLayout>